added get requests

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Smoothies API</title>
 </head>
 <body>
-    
+    <h1>Smoothies API</h1>
+    <h3>Browse this API to make all the smoothies of your dreams!</h3>
+    <h5>API link can be found at:</h5>
 </body>
 </html>
