added site link to index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
     <h1>Smoothies API</h1>
     <h3>Browse this API to make all the smoothies of your dreams!</h3>
-    <h5>API link can be found at:</h5>
+    <h5>API link can be found at: https://smoothie-api-node.herokuapp.com/ </h5>
 </body>
 </html>
